# CellTypeGenomics

./: .gitattributes  .gitignore  .gitpod.yml  Genelist1_results.csv  Genelist2.txt  Genelist3.txt  Genelist4.txt  Genelist5.txt  Genelist6.txt  README.md  celltypegenomics.ipynb  celltypegenomicsv2.ipynb  download_json_from_hpa.ipynb  download_json_from_hpa.py  fischer_test_on_hpa_data cleaned.ipynb  fischer_test_on_hpa_data.ipynb  gene_symbol_to_ensembl.json  new.ipynb  test.ipynb  top_5_significant_genes.json
Genelists/: Genelist1.txt
PyPI/: README.md  README.txt  pyproject.toml
PyPI/src/CellTypeGenomics_netzyron/: celltypegenomics.py
PyPI/src/CellTypeGenomics_netzyron/json/: cell_types_to_ensembl.json
PyPI/src/celltypegenomics/: __init__.py  celltypegenomics.py  test_celltypegenomics.py  test_integration.py
PyPI/src/celltypegenomics/data/: heca_cell_types_to_ensembl.json  hpa_cell_types_to_ensembl.json  hpa_marker_genes_cell_types_to_ensembl.json  hpa_tissue_to_ensembl.json
genelists/: Genelist1.txt  Genelist2.txt  Genelist3.txt  Genelist4.txt  Genelist5.txt  Genelist6.txt
hECA/: Brain_marker_reference.json
ontology/: HPA marker reference.xlsx  HPA_marker_reference.json  hpa_marker_reference.xlsx  uHAF_marker_reference.json  uhaf_marker_reference.xlsx
output_files/: Genelist1_HPA_results.json  Genelist1_gProfiler_results.json  Genelist1_hECA_results.json  Genelist1_ora_results.json  Genelist2_HPA_results.json  Genelist2_gProfiler_results.json  Genelist2_hECA_results.json  Genelist2_ora_results.json  Genelist3_HPA_results.json  HPA_top_5_results.json  (+28 more)
(+295 files in other folders)
