[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CellTypeGenomics_netzyron"
version = "0.0.1"
authors = [
  { name="Lars Føleide", email="larsfole@stud.ntnu.no" },
]
description = "Package for cell type genomics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Zyron/CellTypeGenomics"
"Bug Tracker" = "https://github.com/Zyron/CellTypeGenomics/issues"