[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celltypegenomics"
version = "0.0.7"
authors = [
  { name="Lars Føleide", email="larsfole@stud.ntnu.no" },
]
description = "Package for cell type genomics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "scipy",
    "statsmodels"
]
include = [
    "celltypegenomics/data/*.json"
]

[project.urls]
"Homepage" = "https://github.com/Zyron/CellTypeGenomics"
"Bug Tracker" = "https://github.com/Zyron/CellTypeGenomics/issues"